# Dead_Feature_Detector

./: -  CMakeLists.txt  README.md  debug.txt
include/: types.hpp
src/: main.cpp
src/cmake_parser/: add_definitions.cpp  add_definitions.hpp  cmake_parser.cpp  cmake_parser.hpp  target_parser.cpp  target_parser.hpp  variable_parser.cpp  variable_parser.hpp
src/resolver/: resolver.cpp  resolver.hpp
src/source_parser/: source_parser.cpp  source_parser.hpp
src/traversal/: traversal.cpp  traversal.hpp
tests/fixtures/: CMakeLists.txt
tests/fixtures/include/: config.h
tests/fixtures/lib/: CMakeLists.txt  feature.cpp
tests/fixtures/src/: main.cpp  utils.cpp
